# hubbard-transformer

./: .gitignore  NOTES.md  README.md  complex_model.py  deembedding.py  embedding.py  model.py  occupation_embedding.py  position_encoding.py  pyproject.toml  real_hubbard.py  requiremenets.txt  testing.ipynb
model/: README.md  hamiltonian.py  hubbard_deembedding.py  model.py  param_embedding.py  position_encoding.py  sampling.py  site_degree_embedding.py  token_embedding.py  weight_init.py
notebooks/: boilerplate.py  complex_transformer.ipynb  einops_rabbit_hole.ipynb  hamiltonian_exact_diag.ipynb  new_embedding.ipynb  optimization.ipynb  surrogate_loss.ipynb  test_sampling.ipynb  trace_multiheaded.ipynb
optimization/: optimization.py
subproblems/: adjustments.py  better_adjustments.py
test/: test_hamiltonian.py  test_hubbard_deembedding.py  test_model_new.py  test_param_embedding.py  test_positional.py  test_sampling.py  test_sampling_model_agree.py  test_site_degree_embedding.py  test_token_embedding.py
testing/: boilerplate.py  complex_transformer.ipynb  exact_diagonalization.ipynb  initial_embedding.ipynb  position_encoding.ipynb  test_hamiltonian.py  test_hubbard_deembedding.py  test_masking.py  test_model.py  test_model_new.py  test_param_embedding.py  test_sampling.py  test_site_degree_embedding.py
testing_scripts/: test_param_embedding.py  test_positional.py  test_token_embedding.py
utils/: dummy_data.py  exact_diagonalization.py  ground_states.py  hooks.py  logging.py  print_contributing.py
