[project]
name = "hubbard-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchtyping>=0.1.5",
    "torchviz>=0.0.3",
]
