[project]
name = "hubbard-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "load-dotenv>=0.1.0",
    "matplotlib>=3.10.1",
    "neptune>=1.14.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchtyping>=0.1.5",
    "torchviz>=0.0.3",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
src = ["."]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F722", "F401", "F403", "E402"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


# [tool.uv.sources]
# torch = { index = "pytorch" }

# [[tool.uv.index]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true
